--- a/StockManagement Solution/StockManagement.Web/web/secured/Brand.xhtml
+++ b/StockManagement Solution/StockManagement.Web/web/secured/Brand.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./master/main.xhtml"
+                template="./../master/main.xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
@@ -18,7 +18,7 @@
                         <p:commandButton onclick="PF('newDialog').show();" type="button" value="New" icon="ui-icon-plus"  />
                     </div>
                 </f:facet> 
-                <p:ajax  id="showProductsEvent" event="rowSelect" listener="#{brandBean.onRowSelect}" update=":ProductForm:tabProduct:ProductTable"  />
+                <p:ajax  id="showProductsEvent" event="rowSelect" listener="#{brandBean.onRowSelect}" update=":ProductForm:tabProduct:ProductTable" />
                 <p:column headerText="Code">${itemBrand.brdCode}</p:column>
                 <p:column headerText="Name">${itemBrand.brdName}</p:column>
                 <p:column headerText="Date">${itemBrand.brdCreationDate}</p:column>
@@ -44,7 +44,7 @@
                     </p:commandButton>
                 </p:column>               
             </p:dataTable>
-            <p:blockUI id="loading1" block=":mainForm:BrandTable" trigger=":mainForm:BrandTable">
+            <p:blockUI widgetVar="loading1" block=":mainForm:BrandTable" trigger=":mainForm:BrandTable">
                 LOADING<br />
                 <p:graphicImage name="./images/45.gif" />
             </p:blockUI>
@@ -153,13 +153,13 @@
       
     </ui:define>
   
-        <ui:define name="right" >
+    <ui:define id="right" name="right" >
 
         <h:form id="ProductForm">
             <p:accordionPanel id="tabProduct">
                 <p:tab title="Products management">
                     <h:panelGrid columns="1" >
-                        <p:carousel id="ProductTable" value="#{brandBean.products}"
+                        <p:carousel id="ProductTable" value="#{brandBean.products}" 
                                     var="itemProduct" itemStyle="width: 200px !important;"  
                                     numVisible="1" easing="easeOutBounce"  circular="true">
                             <h:panelGrid columns="2" style="width:100%" columnClasses="label,value" class="tableHeader">
