--- a/StockManagement Solution/StockManagement.Web/web/secured/supplier.xhtml
+++ b/StockManagement Solution/StockManagement.Web/web/secured/supplier.xhtml
@@ -42,6 +42,11 @@
                         <f:setPropertyActionListener value="#{supplier}" target="#{supplierBean.selectedSupplier}" />
                     </p:commandButton>
                 </p:column>
+                <p:column style="width:32px;text-align: center">
+                     <p:commandButton icon="ui-icon ui-icon-cart"  action="product" title="View products">
+                         <f:param id="sup_id"  name="sup_id" value="#{supplier.supCode}"  />
+                     </p:commandButton >
+                 </p:column>
             </p:dataTable>
             <p:blockUI block=":mainForm:supplierTable" trigger=":mainForm:supplierTable">
                 LOADING<br />
